--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ analytics:
 
 # Site Author
 author:
-  name: "clainy" # 블로그 닉네임
+  name: "clainyun" # 블로그 닉네임
   avatar: "/assets/images/meee.png" # 블로그 프로필 사진
   #   bio              : "hi all!"
   # location         : "Seoul, Korea"
@@ -282,3 +282,4 @@ defaults:
       related: true
       sidebar:
         nav: "categories"
+
