--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links
 main:
   - title: "Home"
-    url: https://choiiis.github.io/
+    url: https://clainyun.github.io/
 
   - title: "About"
     url: /about/
 
   - title: "GitHub"
-    url: https://github.com/choiiis
+    url: https://github.com/clainyun
 
   # - title: "Projects"
   #   url: /projects/
@@ -26,3 +26,4 @@ categories:
     url: /categories/categories3/
   - title: "Categories4"
     url: /categories/categories4/
+
